# uTubeTranscribe

./: README.md  pyproject.toml  transcribe.py
